# itmo_task_bot

./: .env.example  README.md  build_index.py  config.py  data_processor.py  itmo_programs_full.json  llm_system.py  pyproject.toml  requirements.txt  run_full_pipeline.py  scraper.py  telegram_bot.py
